...
                    Image.asset(
                      'assets/imagenes/kanbly_logo.png',
                      width: 260,
                      fit: BoxFit.contain,
                      errorBuilder: (context, error, stackTrace) {
                        return const Text(
                          'Kanbly',
                          style: TextStyle(
                            fontSize: 30,
                            fontWeight: FontWeight.bold,
                            color: azulCielo,
                          ),
                        );
...
                                    : null,
                              ),
                              child: TextFormField(
                                controller: _emailController,
                                focusNode: _emailFocus, // ← nuevo
                                decoration: InputDecoration(
                                  labelText: 'Correo institucional',
                                  labelStyle: const TextStyle(
                                    color: grisOscuro,
                                    fontSize: 14,
                                    fontWeight: FontWeight.w500,
                                  ),
                                  hintText: 'ejemplo@e.uttecamac.edu.mx',
...
                              ),
                              child: TextFormField(
                                controller: _passwordController,
                                focusNode: _passwordFocus, // ← nuevo
                                obscureText: _obscurePassword,
                                decoration: InputDecoration(
                                  labelText: 'Contraseña',
                                  labelStyle: const TextStyle(
                                    color: grisOscuro,
                                    fontSize: 14,
                                    fontWeight: FontWeight.w500,
                                  ),
                                  prefixIcon: ShaderMask(
...
                                  borderRadius: BorderRadius.circular(12),
                                  onTap: authController.isLoading ? null : _handleLogin,
                                  child: Center(
                                    child: authController.isLoading
                                        ? const CircularProgressIndicator(color: Colors.white, strokeWidth: 2)
                                        : const Text(
                                      'Iniciar Sesión',
                                      style: TextStyle(
                                        fontSize: 16,
                                        fontWeight: FontWeight.w600,
                                        color: Colors.white,
                                        letterSpacing: 0.5,
                                      ),
...
