...
      return 'El correo electrónico es requerido';
    }
    if (!EmailValidator.validate(value)) {
      return 'Ingresa un correo electrónico válido';
    }
    if (!value.endsWith('@e.uttecamac.edu.mx')) {
      return 'Solo se permiten correos institucionales @e.uttecamac.edu.mx';
    }
    return null;
  }

  // Validar contraseña
  static String? validatePassword(String? value) {
...
