...
          ),

          // --- OPCIÓN 1: MIS TABLEROS ---
          ListTile(
            leading: const Icon(Icons.dashboard_outlined, color: Color(0xFF37B5F4)),
            title: const Text(
              'Mis Tableros',
              style: TextStyle(
                color: Color(0xFF1E293B),
                fontWeight: FontWeight.w600,
              ),
            ),
            onTap: () {
...
