...
          const SizedBox(height: 20),

          // --- TÍTULO DE LA SECCIÓN ---
          const Padding(
            padding: EdgeInsets.symmetric(horizontal: 16.0),
            child: Text(
              'Mis Tableros',
              style: TextStyle(
                color: Color(0xFF1E293B),
                fontSize: 20,
                fontWeight: FontWeight.bold,
              ),
            ),
...
                          ),

                      ],
                    ),
                    const SizedBox(height: 4),
                    Text(
                      tablero.esGrupal? 'Equipo' : 'Individual',
                      style: const TextStyle(color: Colors.grey, fontSize: 11),
                    ),
                    const Spacer(),
                    Icon(
                      tablero.esGrupal ? Icons.groups_rounded : Icons.person_outline_rounded,
                      color: colorTipo,
...
                  final porHacer = tareas.where((t) => t.estadoNombre == 'Pendiente' || t.estado == EstadoTarea.pendiente).length;
                  final enProgreso = tareas.where((t) => t.estadoNombre == 'En progreso' || t.estado == EstadoTarea.enProgreso).length;
                  final hecho = tareas.where((t) => t.estadoNombre == 'Completada' || t.estado == EstadoTarea.completada || t.estadoNombre == 'Hecho').length;

                  return Row(
                    children: [
                      _crearBloqueEstado(valor: porHacer, etiqueta: 'Por hacer', fondo: const Color(0xFF1E293B)),
                      _crearBloqueEstado(valor: enProgreso, etiqueta: 'En progreso', fondo: const Color(0xFF63B09C)),
                      _crearBloqueEstado(valor: hecho, etiqueta: 'Hecho', fondo: const Color(0xFF63D0A1), ultimo: true),
                    ],
                  );
                },
              ),
...
                  decoration: BoxDecoration(
                    color: const Color(0xFF63D0A1).withOpacity(0.1),
                    borderRadius: BorderRadius.circular(10),
                  ),
                  child: const Icon(Icons.person_outline_rounded, color: Color(0xFF63D0A1)),
                ),
                title: const Text('Tablero Individual', style: TextStyle(fontWeight: FontWeight.bold)),
                subtitle: const Text('Para organizar tus tareas personales de forma privada.'),
                onTap: () {
                  Navigator.pop(context);
                  _redirigirAFormulario(esGrupal: false);
                },
              ),
...
