...
        child: SizedBox(
          height: 50,
          child: ElevatedButton.icon(
            onPressed: _guardarTablero,
            icon: const Icon(Icons.check_circle_outline, color: Colors.white),
            label: Text(
              widget.tablero != null ? 'Guardar Cambios' : 'Crear Tablero',
              style: const TextStyle(
                  color: Colors.white,
                  fontWeight: FontWeight.bold,
                  fontSize: 16),
            ),
            style: ElevatedButton.styleFrom(
...
                ),
                validator: (value) => (value == null || value.trim().isEmpty)
                    ? 'Ingresa un nombre'
                    : null,
              ),
              const SizedBox(height: 16),
              const Text('Descripción (Opcional)',
                  style: TextStyle(
                      color: Color(0xFF1E293B),
                      fontWeight: FontWeight.bold,
                      fontSize: 13)),
              const SizedBox(height: 8),
              TextFormField(
...
